--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:title=""
-        android:icon="@drawable/ic_launcher_background"
+        android:icon="@drawable/ic_home"
         app:showAsAction="ifRoom"
         app:iconTint="@color/black"
         android:id="@+id/conversationListMenuItem"/>
@@ -12,7 +12,7 @@
 
     <item
         android:title=""
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_settings"
         app:showAsAction="ifRoom"
         app:iconTint="@color/black"
         android:id="@+id/profilePageMenuItem"/>
